--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ body {
       width: 136px;
       height: 76px;
       padding: 1px;
-      background-color: #43d793;
+      background-color: rgba(171, 171, 171, 0.9);
       box-shadow: inset 2px 3px 6px 0px rgba(0, 0, 0, 0.25);
       border-radius: 38px 38px 38px 38px;
       display: -webkit-flex;
