Few changes in classed and js

--- a/index.jade
+++ b/index.jade
@@ -7,9 +7,9 @@ html(lang="en")
         link(rel="stylesheet", href="main.css")
     body
         .container
-            .outer_shell
-                .color_overlay
-                    .switch
-        
+            .switch_wrapper
+                .status_wrapper
+                    .switch_cta
+            span.text Off
         script(src="jquery.js")
         script(src="app.js")
