--- a/main.css
+++ b/main.css
@@ -18,47 +18,48 @@ body {
   align-items: center; }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 500px;
   height: 500px;
-  background-color: rgba(0, 0, 0, 0.1);
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center; }
-  .container .outer_shell {
+  margin: 10px auto; }
+  .container .switch_wrapper {
     width: 140px;
     height: 80px;
-    background-color: white;
-    display: -webkit-flex;
-    display: -ms-flex;
+    background-color: #fff;
+    border-radius: 40px;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
-    border-radius: 40px 40px 40px 40px; }
-    .container .outer_shell .color_overlay {
+    align-items: center; }
+    .container .switch_wrapper .status_wrapper {
       width: 136px;
       height: 76px;
-      padding: 1px;
-      background-color: rgba(171, 171, 171, 0.9);
-      box-shadow: inset 2px 3px 6px 0px rgba(0, 0, 0, 0.25);
-      border-radius: 38px 38px 38px 38px;
-      display: -webkit-flex;
-      display: -ms-flex;
+      background-color: #e4e4e4;
+      box-shadow: inset 2px 2px 6px 1px rgba(0, 0, 0, 0.2);
+      border-radius: 40px 40px 40px 40px;
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
       align-items: center;
-      cursor: pointer; }
-      .container .outer_shell .color_overlay .switch {
-        width: 74px;
-        height: 74px;
-        background: linear-gradient(45deg, #ffffff, #d2d2d2);
+      padding: 2px;
+      transition: all 300ms ease-in-out 100ms; }
+      .container .switch_wrapper .status_wrapper.status_change {
+        background-color: #5eff9d; }
+      .container .switch_wrapper .status_wrapper .switch_cta {
+        width: 72px;
+        height: 72px;
+        background-color: #ffffff;
+        box-shadow: 1px 2px 5px 0px rgba(0, 0, 0, 0.15);
         border-radius: 100%;
-        box-shadow: 1px 2px 6px 0px rgba(0, 0, 0, 0.25);
-        transition: all 300ms cubic-bezier(0.93, 0.32, 0.18, 0.85) 50ms; }
-        .container .outer_shell .color_overlay .switch.toggle {
-          transform: translate(60px);
-          background: linear-gradient(-45deg, #d2d2d2, #ffffff); }
+        cursor: pointer;
+        transition: all 300ms ease-in-out; }
+        .container .switch_wrapper .status_wrapper .switch_cta.toggle {
+          transform: translate(60px); }
+  .container span.text {
+    margin: 5vh auto;
+    font-family: "Roboto Mono", monospace, sans-serif;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.5); }
